<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#cccccc"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" >

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_duration"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_distance"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/label_pace"
        android:textSize="16sp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/label_start_date"
        android:textSize="16sp" />

</LinearLayout>